# ACGraph

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
example/: bfs.cpp  example.cpp  example.hpp  kcore.cpp  mis.cpp  ppr.cpp  pr.cpp  wcc_lp.cpp
include/: adaptive_set.hpp  bufferpool.hpp  config.hpp  executor.hpp  graph.hpp  io_engine.hpp  mbq.hpp  meta_data.hpp  scheduler.hpp  tls.hpp  types.hpp  worklist.hpp
src/: aligned_data.hpp  atomic_ptr.hpp  barrier.hpp  block_info.cpp  block_info.hpp  executor.cpp  job_wrapper.hpp  log.h  thread_pool.hpp  timer.hpp  util.cpp  util.hpp
src/io/: aio.hpp  file.hpp  file_reader.hpp  serialize.hpp
tools/: el2csr.cpp  formatter.cpp  partitioner.hpp  segment_tree.hpp
